feat: add backlink to the static site

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <title>Hello world</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <p>This site is deployed via GitHub Actions</p>
+    <h1>Hello World!</h1>
+    <p>This site is deployed via GitHub Actions.</p>
+    <p><a href="https://github.com/yavisht/deploy-via-surge.sh-github-action-template">Check the repo here</a></p>
   </body>
 </html>
